--- a/Day 17/vite-project-03012023/src/App.css
+++ b/Day 17/vite-project-03012023/src/App.css
@@ -3,6 +3,16 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+   */
 }
 
 .logo {
